--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
               </div>
               <div class="card" style="width: 25rem;">
-                <img src="img/olq-dos.jpg" class="card-img-top" alt="...">
+                <img src="img/nlatt.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -129,7 +129,7 @@
                 </div>
               </div>
               <div class="card" style="width: 25rem;">
-                <img src="img/olq-dos.jpg" class="card-img-top" alt="...">
+                <img src="img/quizz.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">APP PREGUNTAS</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
